tests/golden/3-basic-and-simple-literals/invalid/strict/bad-implicit-null-literal-1.yini
^ BadImplicitNullInStrict
val1 =
/END
